# mpkpen-2.0

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
in_proto/: Message.proto  Order.proto  Ticket.proto
in_src/: data_def.proto  version.h.in
public_library/: CMakeLists.txt  client.cpp  client.h
public_library/src/: client.cpp  client.h  logger.cpp  logger.h  main.cpp  main.h  message_dispatcher.cpp  message_dispatcher.h  message_processor.h  message_processor_order.cpp  message_processor_order.h  message_processor_ticket.cpp  message_processor_ticket.h  order_counter.cpp  order_counter.h  runtime_error.cpp  runtime_error.h  side_arm.cpp  side_arm.h  side_kts.cpp  side_kts.h  udp_client.cpp  udp_client.h  udp_client_manager.cpp  udp_client_manager.h  udp_server.cpp  udp_server.h
public_library/src/old/: message_dispatcher.cpp  message_processor_order.cpp  message_processor_ticket.h  order_cntr.h  thread_pool.cpp  thread_pool.h
run_src/: mpkpen.cpp  mpkpen_arm.cpp  mpkpen_kts.cpp
uml/: planing.mdj
